--- a/gallery.html
+++ b/gallery.html
@@ -13,12 +13,12 @@
 
     <div class="layout">
         <h1 class="animated bounce">Gallery</h1>
-        <a href="Dragon.png" class="animated rollIn delay-1s" data-lightbox="Brendan's Art" data-title="Dragon"><img src="Dragon.png" alt=""></a>
-        <a href="House.PNG" class="animated rollIn delay-1s" data-lightbox="Brendan's Art" data-title="House"><img src="House.PNG" alt=""></a>
-        <a href="Jason.PNG" class="animated rollIn delay-2s" data-lightbox="Brendan's Art" data-title="Jason"><img src="Jason.PNG" alt=""></a>
-        <a href="TwoFaceA.PNG" class="animated rollIn delay-2s" data-lightbox="Brendan's Art" data-title="Face 1"><img src="TwoFaceA.PNG" alt=""></a>
-        <a href="TwoFaceB.PNG" class="animated rollIn delay-3s" data-lightbox="Brendan's Art" data-title="Face 2"><img src="TwoFaceB.PNG" alt=""></a>
-        <a href="Tabor.PNG" class="animated rollIn delay-3s" data-lightbox="Brendan's Art" data-title="Dog"><img src="Tabor.PNG" alt=""></a>
+        <a href="Dragon.png" class="animated rollIn delay-1s"><img src="Dragon.png" alt=""></a>
+        <a href="House.PNG" class="animated rollIn delay-1s"><img src="House.PNG" alt=""></a>
+        <a href="Jason.PNG" class="animated rollIn delay-2s"><img src="Jason.PNG" alt=""></a>
+        <a href="TwoFaceA.PNG" class="animated rollIn delay-2s"><img src="TwoFaceA.PNG" alt=""></a>
+        <a href="TwoFaceB.PNG" class="animated rollIn delay-3s"><img src="TwoFaceB.PNG" alt=""></a>
+        <a href="Tabor.PNG" class="animated rollIn delay-3s"><img src="Tabor.PNG" alt=""></a>
     </div>
 
     <script src="lightbox-plus-jquery.min.js"></script>
