Added more photos

--- a/gallery.html
+++ b/gallery.html
@@ -12,13 +12,18 @@
 <body>
 
     <div class="layout">
-        <h1 class="animated bounce">Gallery</h1>
-        <a href="Dragon.png" class="animated rollIn delay-1s"><img src="Dragon.png" alt=""></a>
-        <a href="House.PNG" class="animated rollIn delay-1s"><img src="House.PNG" alt=""></a>
-        <a href="Jason.PNG" class="animated rollIn delay-2s"><img src="Jason.PNG" alt=""></a>
-        <a href="TwoFaceA.PNG" class="animated rollIn delay-2s"><img src="TwoFaceA.PNG" alt=""></a>
-        <a href="TwoFaceB.PNG" class="animated rollIn delay-3s"><img src="TwoFaceB.PNG" alt=""></a>
-        <a href="Tabor.PNG" class="animated rollIn delay-3s"><img src="Tabor.PNG" alt=""></a>
+        <h1>Gallery</h1>
+        <a href="Dragon.png"><img src="Dragon.png" alt=""></a>
+        <a href="House.PNG"><img src="House.PNG" alt=""></a>
+        <a href="Jason.PNG"><img src="Jason.PNG" alt=""></a>
+        <a href="TwoFaceA.PNG"><img src="TwoFaceA.PNG" alt=""></a>
+        <a href="TwoFaceB.PNG"><img src="TwoFaceB.PNG" alt=""></a>
+        <a href="Sitch.PNG.PNG"><img src="Tabor.PNG" alt=""></a>
+        <a href="Carrot.PNG"><img src="Tabor.PNG" alt=""></a>
+        <a href="Archer2.PNG"><img src="Tabor.PNG" alt=""></a>
+        <a href="Archer.PNG"><img src="Tabor.PNG" alt=""></a>
+        <a href="wavey.PNG"><img src="Tabor.PNG" alt=""></a>
+        <a href="Wolf.PNG"><img src="Tabor.PNG" alt=""></a>
     </div>
 
     <script src="lightbox-plus-jquery.min.js"></script>
