fix last Upload

--- a/gallery.html
+++ b/gallery.html
@@ -19,11 +19,11 @@
         <a href="TwoFaceA.PNG"><img src="TwoFaceA.PNG" alt=""></a>
         <a href="TwoFaceB.PNG"><img src="TwoFaceB.PNG" alt=""></a>
         <a href="Sitch.PNG.PNG"><img src="Tabor.PNG" alt=""></a>
-        <a href="Carrot.PNG"><img src="Tabor.PNG" alt=""></a>
-        <a href="Archer2.PNG"><img src="Tabor.PNG" alt=""></a>
-        <a href="Archer.PNG"><img src="Tabor.PNG" alt=""></a>
-        <a href="wavey.PNG"><img src="Tabor.PNG" alt=""></a>
-        <a href="Wolf.PNG"><img src="Tabor.PNG" alt=""></a>
+        <a href="Carrot.PNG"><img src="Carrot.PNG" alt=""></a>
+        <a href="Archer2.PNG"><img src="Archer2.PNG" alt=""></a>
+        <a href="Archer.PNG"><img src="Archer.PNG" alt=""></a>
+        <a href="wavey.PNG"><img src="wavey.PNG" alt=""></a>
+        <a href="Wolf.PNG"><img src="Wolf.PNG" alt=""></a>
     </div>
 
     <script src="lightbox-plus-jquery.min.js"></script>
